Bug 219290 - Wrong wording (View instead of Tab)
Summary: Wrong wording (View instead of Tab)
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-19 12:19 UTC by Burkhard Lück
Modified: 2011-03-04 18:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Burkhard Lück 2009-12-19 12:19:14 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

konsole has views - the main view or several views using the split option. Each view has one or mor tabs.
In ViewManager.cpp are several wrong and confusing wordings, where "View" is used but  these strings refer to "Tab":

ViewManager.cpp:137
- Next View
+Next Tab

ViewManager.cpp:138
- Previous View
+Previous Tab

ViewManager.cpp:141
- Move View Left
+ Move Tab Left

ViewManager.cpp:142
- Move View Right
+ Move Tab Right

ViewManager.cpp:183
- &Detach View
+ &Detach Tab
Comment 1 Kurt Hindenburg 2011-03-04 18:42:59 UTC
Git commit ae29427a265082ff8287b6980129238d456714e5 by Kurt Hindenburg.
Committed on 04/03/2011 at 18:37.
Pushed by hindenburg into branch 'master'.

Correct shortcut action titles: view -> tabs

BUG: 219290
FIXED-IN: 4.7

M  +4    -4    src/ViewManager.cpp     

http://commits.kde.org/konsole/ae29427a265082ff8287b6980129238d456714e5