Correct shortcut action titles: view -> tabs

BUG: 219290
FIXED-IN: 4.7